Model Tests fixed